feat(product-brand): add enableBrandById and disableBrandById methods to ProductBrandJpaRepository with @Modifying and @Query for status updates